feat: stats - successfully, but postman crashed. i need ci logic