@@ -1,5 +1,6 @@
 package ru.practicum.application.event.service.impl;
 
+import com.google.protobuf.Timestamp;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
@@ -9,21 +10,19 @@ import ru.practicum.application.event.mapper.EventMapper;
 import ru.practicum.application.event.model.Event;
 import ru.practicum.application.event.repository.EventRepository;
 import ru.practicum.application.event.service.EventService;
-import ru.practicum.client.CategoryFeignClient;
-import ru.practicum.client.RequestFeignClient;
-import ru.practicum.client.StatsClient;
-import ru.practicum.client.UserFeignClient;
-import ru.practicum.client.util.JsonFormatPattern;
-import ru.practicum.dto.StatsRequestDto;
+import ru.practicum.client.*;
 import ru.practicum.dto.category.CategoryDto;
 import ru.practicum.dto.enums.EventState;
 import ru.practicum.dto.event.EventFullDto;
 import ru.practicum.dto.event.EventShortDto;
 import ru.practicum.dto.request.EventRequestDto;
 import ru.practicum.dto.user.UserDto;
+import ru.practicum.ewm.stats.proto.*;
 import ru.practicum.exception.NotFoundException;
 import ru.practicum.exception.ValidationException;
+import ru.practicum.util.JsonFormatPattern;
 
+import java.time.Instant;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
@@ -44,17 +43,16 @@ public class EventServiceImpl implements EventService {
     private final UserFeignClient userClient;
     private final CategoryFeignClient categoryClient;
     private final RequestFeignClient requestClient;
-    private final StatsClient statsClient;
+    private final CollectorGrpcClient collectorGrpcClient;
+    private final AnalyzerGrpcClient analyzerGrpcClient;
 
     private final EventRepository eventRepository;
 
     @Override
-    public EventFullDto getEventById(Long eventId, String uri, String ip) throws NotFoundException {
+    public EventFullDto getEventById(Long eventId, Long userId, String uri, String ip) throws NotFoundException {
 
-        statsClient.save(new StatsRequestDto("main-server",
-                uri,
-                ip,
-                LocalDateTime.now()));
+        collectorGrpcClient.sendUserAction(
+                createUserAction(eventId, userId, ActionTypeProto.ACTION_VIEW, Instant.now()));
 
         Event event = eventRepository.findById(eventId).orElseThrow(notFoundException(NOT_FOUND_EVENT_MESSAGE, eventId));
 
@@ -62,7 +60,7 @@ public class EventServiceImpl implements EventService {
             throw new NotFoundException("Такого события не существует");
         }
 
-        var confirmed = requestClient.countByEventAndStatuses(event.getId(), List.of("CONFIRMED"));
+        long confirmed = requestClient.countByEventAndStatuses(event.getId(), List.of("CONFIRMED"));
 
         EventFullDto eventFullDto = EventMapper.mapEventToFullDto(
                 event,
@@ -71,11 +69,10 @@ public class EventServiceImpl implements EventService {
                 userClient.getById(event.getInitiator())
         );
 
-        List<String> urls = Collections.singletonList(uri);
-        LocalDateTime start = LocalDateTime.parse(eventFullDto.getCreatedOn(), DateTimeFormatter.ofPattern(JsonFormatPattern.TIME_PATTERN));
-        LocalDateTime end = LocalDateTime.now();
+        List<RecommendedEventProto> proto = analyzerGrpcClient.getInteractionsCount(getInteractionsRequest(List.of(eventId)));
 
-        eventFullDto.setViews(statsClient.getStats(start, end, urls, true).size());
+        Double rating = proto.isEmpty() ? 0.0 : proto.getFirst().getScore();
+        eventFullDto.setRating(rating);
 
         return eventFullDto;
     }
@@ -145,14 +142,9 @@ public class EventServiceImpl implements EventService {
             events = eventRepository.findEventList(text, categories, paid, startDate, endDate, EventState.PUBLISHED);
         }
 
-        statsClient.save(new StatsRequestDto("main-server",
-                uri,
-                ip,
-                LocalDateTime.now()));
-
         if (!sortDate) {
             List<EventShortDto> shortEventDtos = createShortEventDtos(events);
-            shortEventDtos.sort(Comparator.comparing(EventShortDto::getViews));
+            shortEventDtos.sort(Comparator.comparing(EventShortDto::getRating));
             shortEventDtos = shortEventDtos.subList(from, Math.min(from + size, shortEventDtos.size()));
             return shortEventDtos;
         }
@@ -160,37 +152,68 @@ public class EventServiceImpl implements EventService {
         return createShortEventDtos(events);
     }
 
-    List<EventShortDto> createShortEventDtos(List<Event> events) {
-
-        HashMap<Long, Integer> eventIdsWithViewsCounter = new HashMap<>();
-
-        LocalDateTime startTime = events.getFirst().getCreatedOn();
-        ArrayList<String> uris = new ArrayList<>();
-        for (Event event : events) {
-            uris.add("/events/" + event.getId().toString());
-            if (startTime.isAfter(event.getCreatedOn())) {
-                startTime = event.getCreatedOn();
-            }
-        }
-
-        var viewsCounter = statsClient.getStats(startTime, LocalDateTime.now(), uris, true);
-
-        for (var statsDto : viewsCounter) {
-            String[] split = statsDto.getUri().split("/");
-            eventIdsWithViewsCounter.put(Long.parseLong(split[2]), Math.toIntExact(statsDto.getHits()));
-        }
-
-        List<EventRequestDto> requests = requestClient.findByEventIds(new ArrayList<>(eventIdsWithViewsCounter.keySet()));
+    @Override
+    public List<EventFullDto> getRecommendations(Long userId) {
+        List<Event> events = eventRepository.findAllById(
+                analyzerGrpcClient.getRecommendationsForUser(
+                        UserPredictionsRequestProto.newBuilder()
+                                .setUserId(userId)
+                                .setMaxResult(10)
+                                .build()
+                ).stream().map(RecommendedEventProto::getEventId).collect(Collectors.toList())
+        );
         List<Long> usersIds = events.stream().map(Event::getInitiator).toList();
-
         Set<Long> categoriesIds = events.stream().map(Event::getCategory).collect(Collectors.toSet());
-
         Map<Long, UserDto> users = userClient.getUsersList(usersIds, 0, Math.max(events.size(), 1)).stream()
                 .collect(Collectors.toMap(UserDto::getId, userDto -> userDto));
-
         Map<Long, CategoryDto> categories = categoryClient.getCategoriesByIds(categoriesIds).stream()
                 .collect(Collectors.toMap(CategoryDto::getId, categoryDto -> categoryDto));
 
+        return events.stream().map(e -> EventMapper.mapEventToFullDto(
+                e,
+                requestClient.countByEventAndStatuses(e.getId(), List.of("CONFIRMED")),
+                categories.get(e.getCategory()),
+                users.get(e.getInitiator())
+        )).collect(Collectors.toList());
+    }
+
+    @Override
+    public void likeEvent(Long eventId, Long userId) throws ValidationException {
+
+        if (!requestClient.isUserTakePart(userId, eventId)) {
+            throw new ValidationException("Пользователь " + userId + " не принимал участи в событии " + eventId);
+        }
+
+        collectorGrpcClient.sendUserAction(createUserAction(eventId, userId, ActionTypeProto.ACTION_LIKE, Instant.now()));
+    }
+
+    private UserActionProto createUserAction(Long eventId, Long userId, ActionTypeProto type, Instant timestamp) {
+        return UserActionProto.newBuilder()
+                .setUserId(userId)
+                .setEventId(eventId)
+                .setActionType(type)
+                .setTimestamp(Timestamp.newBuilder()
+                        .setSeconds(timestamp.getEpochSecond())
+                        .setNanos(timestamp.getNano())
+                        .build())
+                .build();
+    }
+
+    private List<EventShortDto> createShortEventDtos(List<Event> events) {
+        List<EventRequestDto> requests = requestClient.findByEventIds(new ArrayList<>(
+                events.stream().map(Event::getId).collect(Collectors.toList())
+        ));
+        List<Long> usersIds = events.stream().map(Event::getInitiator).toList();
+        Set<Long> categoriesIds = events.stream().map(Event::getCategory).collect(Collectors.toSet());
+        Map<Long, UserDto> users = userClient.getUsersList(usersIds, 0, Math.max(events.size(), 1)).stream()
+                .collect(Collectors.toMap(UserDto::getId, userDto -> userDto));
+        Map<Long, CategoryDto> categories = categoryClient.getCategoriesByIds(categoriesIds).stream()
+                .collect(Collectors.toMap(CategoryDto::getId, categoryDto -> categoryDto));
+        InteractionsCountRequestProto proto = getInteractionsRequest(
+                events.stream().map(Event::getId).collect(Collectors.toList())
+        );
+        Map<Long, Double> eventRating = analyzerGrpcClient.getInteractionsCount(proto)
+                .stream().collect(Collectors.toMap(RecommendedEventProto::getEventId, RecommendedEventProto::getScore));
         return events.stream()
                 .map(e -> EventMapper.mapEventToShortDto(e, categories.get(e.getCategory()), users.get(e.getInitiator())))
                 .peek(dto -> dto.setConfirmedRequests(
@@ -198,7 +221,11 @@ public class EventServiceImpl implements EventService {
                                 .filter((request -> request.getEvent().equals(dto.getId())))
                                 .count()
                 ))
-                .peek(dto -> dto.setViews(eventIdsWithViewsCounter.get(dto.getId())))
-                .toList();
+                .peek(dto -> eventRating.getOrDefault(dto.getId(), 0.0))
+                .collect(Collectors.toList());
+    }
+
+    private InteractionsCountRequestProto getInteractionsRequest(List<Long> eventId) {
+        return InteractionsCountRequestProto.newBuilder().addAllEventId(eventId).build();
     }
 }
